older browser display bug : remove overflow scroll on title container

--- a/src/styles/SASS/components/_DisplayFullTracks.scss
+++ b/src/styles/SASS/components/_DisplayFullTracks.scss
@@ -28,7 +28,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-  
 
     .full-track-duration-display {
         margin: 0;
@@ -90,7 +89,6 @@
         justify-content: flex-end;
         align-items: flex-start;
         bottom: 1px;
-        overflow: scroll;
 
     }
 
