--- a/src/styles/SASS/main.scss
+++ b/src/styles/SASS/main.scss
@@ -29,7 +29,7 @@
 
 html {
     font-size: 16px;
-    margin: auto;
+    // margin: auto;
     transition: all 500ms ease;
     box-sizing: border-box;
     background-color: $background-color;
